# pdf-to-txt

./: .gitignore  pyproject.toml
package-template/: README.md  dev-requirements.txt  pyproject.toml  windows-run-with-uv.ps1
package-template/my_package/: __main__.py  pdf_converter.py
package-template/tests/: test_pdf_converter.py
src/pdf_to_txt/: __init__.py  cli.py  extract.py  nougat_adapter.py
